--- a/nieve.html
+++ b/nieve.html
@@ -4,19 +4,19 @@
 <meta charset="UTF-8">
 <title>CS13HW1</title>
 </head>
+	
+<body>
 	<A NAME="top"></A>
 	<h3>CS13 Homework 1</h3>
 	<CENTER>
 		<h1>Welcome to my website!</h1>
 	</CENTER>
 	
-<body>
-	
 	<BODY TEXT="MIDNIGHTBLUE">
 		<FONT COLOR="BLACK">
 			<CENTER>This webpage is going to be about my friend 
 				&nbsp;
-				<FONT SIZE="+3" COLOR="PURPLE">Nieve.</FONT>
+				<FONT SIZE="+3" COLOR="SlateBlue">Nieve.</FONT>
 				<br/>
 				<br/>
 				<img SRC="nieve.jpg" width="150">
@@ -35,20 +35,31 @@
 			<h4>SQUASH</h4>
 		</FONT>
 		<CENTER>
-			<img SRC="https://snworksceo.imgix.net/ttd/0630c173-1d84-4e69-b5d9-61fa486e12af.sized-1000x1000.jpg?w=1500&ar=4%3A3&fit=crop&crop=faces&facepad=3&auto=format" width="300">
+			
+			<a href="https://gotuftsjumbos.com/sports/womens-squash/roster/nieve-monderer/12273">
+				<img SRC="https://snworksceo.imgix.net/ttd/0630c173-1d84-4e69-b5d9-61fa486e12af.sized-1000x1000.jpg?w=1500&ar=4%3A3&fit=crop&crop=faces&facepad=3&auto=format" width="300">
+			</a>
 			<img SRC="https://dxbhsrqyrr690.cloudfront.net/sidearm.nextgen.sites/gotuftsjumbos.com/images/2022/11/20/DSCF4141.JPG" width="300">
 		</CENTER>
 		<br/>
-		<FONT COLOR="BLACK"> Nieve is plays squash for the Tufts D1 Varsity team. Sometimes she is on Tufts marketing pamphlets or advertisements!</FONT>
+		<FONT COLOR="BLACK"> 
+			Nieve is plays squash for the Tufts D1 Varsity team. Sometimes she is on Tufts marketing pamphlets or advertisements!
+			<br/>
+			<br/>
+			Before I met my friend Nieve, I had no idea what squash was, let alone how intense and exciting the sport could be. Nieve's enthusiasm was contagious, and as I watched her matches, I started to appreciate the skill, strategy, and sheer athleticism required to excel in squash. Now, my friends and I eagerly attend  her matches, cheering her on with love for the sport. Thanks to Nieve, squash has become not just a game, but a source of shared experiences and unforgettable moments in our friendship.
+		</FONT>
 		<br/>
 		
 		<A NAME="rage cage"></A>
 		<FONT COLOR="PURPLE">
 			<h4>THE RAGE CAGE</h4>
 		</FONT>
-		<FONT COLOR="BLACK"> In the fall of 2021, Nieve and I started a radio show for the on campus radio WMFO 91.5 FM Tufts Freeform Radio. Joining the radio with her was a transformative experience that allowed our friendship to bloom in unexpected ways. At first glance, it seemed like we had vastly different music tastes. However, what emerged from this musical dichotomy was a beautiful symphony of shared experiences and evolving preferences. Collaborating on the radio show allowed us to influence each other's musical inclinations. As our playlists blended harmoniously and our on-air banter became more seamless, it was evident that our friendship was thriving on this newfound bond. Through the radio, we discovered the beauty of diversity in tastes and how it could enrich our shared moments, creating a lasting connection that went beyond the airwaves. </FONT>
+		<FONT COLOR="BLACK"> In the fall of 2021, Nieve and I started a radio show for the on campus radio WMFO 91.5 FM Tufts Freeform Radio. Joining the radio with her was an experience that allowed our friendship to grow in unexpected ways. When first starting the show and collaborating on a playlist, it seemed like we had pretty different music tastes. However, unexpectedly, this musical dichotomy allowed our preferences to evolve, and our music knowledge to grow. Our playlists, although chaotic, blended harmoniously and our on-air banter became more seamless. Colloborting and compromising in this environment allowed our friendship to deepenit was evident that our friendship was thriving on this newfound bond. Through the radio, we discovered the beauty of diversity in tastes and how it could enrich our shared moments, creating a lasting connection that went beyond the airwaves. </FONT>
 		<br/>
-		<EMBED SRC="holymoly.mp3">
+		<br/>
+		<audio controls>
+			<source src="holymoly.mp3">
+		</audio>
 		
 		<A NAME="food"></A>
 		<FONT COLOR="PURPLE">
