--- a/nieve.html
+++ b/nieve.html
@@ -36,9 +36,12 @@
 		</FONT>
 		<CENTER>
 			
-			<a href="https://gotuftsjumbos.com/sports/womens-squash/roster/nieve-monderer/12273">
+			<a HREF="https://gotuftsjumbos.com/sports/womens-squash/roster/nieve-monderer/12273">
 				<img SRC="https://snworksceo.imgix.net/ttd/0630c173-1d84-4e69-b5d9-61fa486e12af.sized-1000x1000.jpg?w=1500&ar=4%3A3&fit=crop&crop=faces&facepad=3&auto=format" width="300">
 			</a>
+			<br/>
+			Click this image lol ^
+			<br/>
 			<img SRC="https://dxbhsrqyrr690.cloudfront.net/sidearm.nextgen.sites/gotuftsjumbos.com/images/2022/11/20/DSCF4141.JPG" width="300">
 		</CENTER>
 		<br/>
@@ -70,6 +73,8 @@
 			<li> <A HREF="https://www.eataly.com/us_en/stores/boston">Eataly</A> 
 			<li> <A HREF="https://diesel-cafe.com">Diesel Cafe</A> 
 			<li> <A HREF="https://www.dumplingkitchen.net">Dumpling Kitchen</A> 
+			<li> <A HREF="https://dining.tufts.edu/where-to-eat/dewick-macphie-dining-center">Dewick-Mac-Phie Dining Center</A>
+			<li> <A HREF="http://www.koreanaboston.com">Koreana</A>
 		</ol>
 		
 		Return to top
